added todos and todo draft

--- a/TodoNg/angular.json
+++ b/TodoNg/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "TodoNg"
+    }
+  },
+  "defaultProject": "TodoNg",
+  "cli": {
+    "analytics": false
+  }
 }
