--- a/TodoServiceSpring/src/main/resources/application.properties
+++ b/TodoServiceSpring/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost/tododb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.platform=mysql
 
