--- a/TodoServiceSpring/src/main/resources/application.properties
+++ b/TodoServiceSpring/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/tododb
+server.port=3306
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.platform=mysql
